--- a/Esra.Web/Web.config
+++ b/Esra.Web/Web.config
@@ -5,17 +5,41 @@
   -->
 
 <configuration>
-  <connectionStrings>
-    <add name="ApplicationServices"
-         connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
-         providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <configSections>
+    <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
+    <sectionGroup name="elmah">
+      <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
+      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
+      <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
+    </sectionGroup>
+  </configSections>
+  <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
+    <session-factory>
+      <property name="dialect">NHibernate.Dialect.MsSql2008Dialect</property>
+      <property name="proxyfactory.factory_class">NHibernate.ByteCode.Spring.ProxyFactoryFactory, NHibernate.ByteCode.Spring</property>
+      <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
+      <property name="connection.driver_class">NHibernate.Driver.SqlClientDriver</property>
+      <property name="connection.connection_string_name">MainDB</property>
+      <property name="default_schema">ESRA.dbo</property>
+      <property name="generate_statistics">true</property>
+      <property name="adonet.batch_size">25</property>
+    </session-factory>
+  </hibernate-configuration>
 
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+
+  <connectionStrings>
+    <add name="MainDB" connectionString="data source=vogel;Initial Catalog=ESRA;Integrated Security=true;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
+  <elmah>
+    <!--<errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="RATBERT" applicationName="SampleUCDArchApp"/>-->
+    <!--<errorMail from="fromEmail" to="toEmail" subject="ELMAH: SampleUCDArchApp web error response" smtpServer="YOUR_SMTP"/>-->
+  </elmah>
 
   <system.web>
     <compilation debug="true" targetFramework="4.0">
@@ -49,13 +73,11 @@
       </providers>
     </profile>
 
-    <roleManager enabled="false">
+    <!--<roleManager enabled="true" defaultProvider="CatbertServiceRoleProvider" cacheRolesInCookie="false">
       <providers>
-        <clear/>
-        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/" />
-        <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
+        <add name="CatbertServiceRoleProvider" type="UCDArch.Web.Providers.CatbertServiceRoleProvider" applicationName="SampleUCDArchApp" serviceUrlKey="RoleServiceUrl" authTokenKey="RoleToken" />
       </providers>
-    </roleManager>
+    </roleManager>-->
 
     <pages>
       <namespaces>
@@ -71,7 +93,16 @@
 
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true">
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah"/>
+      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah"/>
+    </modules>
+    <handlers>
+      <remove name="MvcHttpHandler"/>
+      <remove name="UrlRoutingHandler"/>
+      <!--<add name="Elmah" verb="POST,GET,HEAD" path="Errors.axd" type="Elmah.ErrorLogPageFactory, Elmah"/>-->
+      <add name="MvcHttpHandler" preCondition="integratedMode" verb="*" path="*.mvc" type="System.Web.Mvc.MvcHttpHandler, System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL"/>
+    </handlers>
   </system.webServer>
 
   <runtime>
