Deleted Esra.Core/Class1.cs file

--- a/Esra.Web/Web.config
+++ b/Esra.Web/Web.config
@@ -13,6 +13,7 @@
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
     </sectionGroup>
   </configSections>
+
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
       <property name="dialect">NHibernate.Dialect.MsSql2008Dialect</property>
@@ -23,6 +24,8 @@
       <property name="default_schema">ESRA.dbo</property>
       <property name="generate_statistics">true</property>
       <property name="adonet.batch_size">25</property>
+      <!-- HBM Mapping Files -->
+      <mapping assembly="Esra.Core"/>
     </session-factory>
   </hibernate-configuration>
 
