--- a/Esra.Core/Esra.Core.csproj
+++ b/Esra.Core/Esra.Core.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>b567466b-0e40-4425-93fb-f265a6d51e9c</ProjectGuid>
+    <ProjectGuid>{AF622928-B2D4-456D-ADA9-0FF669B3A316}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Esra.Core</RootNamespace>
@@ -31,6 +31,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DataAnnotationsExtensions">
+      <HintPath>..\packages\DataAnnotationsExtensions.0.6.0.0\lib\NETFramework40\DataAnnotationsExtensions.dll</HintPath>
+    </Reference>
+    <Reference Include="DataAnnotationsExtensions.ClientValidation">
+      <HintPath>..\packages\DataAnnotationsExtensions.MVC3.0.6.0.0\lib\NETFramework40\DataAnnotationsExtensions.ClientValidation.dll</HintPath>
+    </Reference>
+    <Reference Include="Iesi.Collections">
+      <HintPath>..\packages\Iesi.Collections.3.1.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate">
+      <HintPath>..\packages\NHibernate.3.1.0.4000\lib\Net35\NHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate.Validator">
+      <HintPath>..\packages\NHibernate.Validator.1.3.1.4000\lib\Net35\NHibernate.Validator.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate.Validator.Specific">
+      <HintPath>..\packages\NHibernate.Validator.1.3.1.4000\lib\Net35\NHibernate.Validator.Specific.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -38,10 +56,63 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="UCDArch">
+      <HintPath>..\Bin\UCDArch.dll</HintPath>
+    </Reference>
+    <Reference Include="WebActivator">
+      <HintPath>..\packages\WebActivator.1.1.0.0\lib\NETFramework40\WebActivator.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="App_Start\RegisterClientValidationExtensions.cs" />
+    <Compile Include="Domain\AppException.cs" />
+    <Compile Include="Domain\ApptType.cs" />
+    <Compile Include="Domain\ChangeType.cs" />
+    <Compile Include="Domain\Department.cs" />
+    <Compile Include="Domain\Employee.cs" />
+    <Compile Include="Domain\EmployeeChanges.cs" />
+    <Compile Include="Domain\ESRSearchParameters.cs" />
+    <Compile Include="Domain\Exception.cs" />
+    <Compile Include="Domain\ITrackable.cs" />
+    <Compile Include="Domain\Lookups.cs" />
+    <Compile Include="Domain\PayRateType.cs" />
+    <Compile Include="Domain\Quartile.cs" />
+    <Compile Include="Domain\QuartileType.cs" />
+    <Compile Include="Domain\SalaryGradeQuartiles.cs" />
+    <Compile Include="Domain\SalaryReviewAnalysis.cs" />
+    <Compile Include="Domain\SalaryScale.cs" />
+    <Compile Include="Domain\SalaryStep.cs" />
+    <Compile Include="Domain\Scenario.cs" />
+    <Compile Include="Domain\SelectionType.cs" />
+    <Compile Include="Domain\SRAEmployee.cs" />
+    <Compile Include="Domain\Title.cs" />
+    <Compile Include="Domain\UCDEmployee.cs" />
+    <Compile Include="Domain\UCDEmployeeID.cs" />
+    <Compile Include="Domain\User.cs" />
+    <Compile Include="Domain\ValidateBO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Domain\ApptType.hbm.xml" />
+    <Content Include="Domain\ChangeType.hbm.xml" />
+    <Content Include="Domain\Department.hbm.xml" />
+    <Content Include="Domain\EmployeeChanges.hbm.xml" />
+    <Content Include="Domain\Lookups.hbm.xml" />
+    <Content Include="Domain\PayRateType.hbm.xml" />
+    <Content Include="Domain\QuartileType.hbm.xml" />
+    <Content Include="Domain\SalaryGradeQuartiles.hbm.xml" />
+    <Content Include="Domain\SalaryReviewAnalysis.hbm.xml" />
+    <Content Include="Domain\SalaryScale.hbm.xml" />
+    <Content Include="Domain\SalaryStep.hbm.xml" />
+    <Content Include="Domain\Scenario.hbm.xml" />
+    <Content Include="Domain\SelectionType.hbm.xml" />
+    <Content Include="Domain\SRAEmployee.hbm.xml" />
+    <Content Include="Domain\Title.hbm.xml" />
+    <Content Include="Domain\UCDEmployee.hbm.xml" />
+    <Content Include="Domain\User.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
