--- a/Esra.Web/packages.config
+++ b/Esra.Web/packages.config
@@ -10,4 +10,5 @@
   <package id="jQuery" version="1.6.1" />
   <package id="jQuery.UI.Combined" version="1.8.13" />
   <package id="jquery.datatables" version="1.8.0" />
+  <package id="MiniProfiler" version="1.2" />
 </packages>
