--- a/Esra.Web/packages.config
+++ b/Esra.Web/packages.config
@@ -9,4 +9,5 @@
   <package id="UcdArchMvcTemplates" version="1.0.0.13" />
   <package id="UcdArchDlls" version="3.1.0.48" />
   <package id="CaesDesignBoilerplate" version="3.1.0.26" />
+  <package id="MiniProfiler" version="1.3" />
 </packages>
