--- a/Esra.Web/Web.config
+++ b/Esra.Web/Web.config
@@ -33,6 +33,7 @@
   </appSettings>
   <connectionStrings>
     <add name="MainDB" connectionString="data source=vogel;Initial Catalog=ESRA;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="Catbert" connectionString="Data Source=vogel;Initial Catalog=CATBERT3;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <elmah>
     <!--<errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="RATBERT" applicationName="SampleUCDArchApp"/>-->
@@ -63,6 +64,11 @@
         <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/" />
       </providers>
     </profile>
+    <roleManager enabled="true" defaultProvider="CatbertRoleProvider" cacheRolesInCookie="false">
+      <providers>
+        <add name="CatbertRoleProvider" type="UCDArch.Web.Providers.CatbertRoleProvider" applicationName="Employee Salary Review Analysis" description="ESRA" connectionString="Catbert" />
+      </providers>
+    </roleManager>
     <!--<roleManager enabled="true" defaultProvider="CatbertServiceRoleProvider" cacheRolesInCookie="false">
       <providers>
         <add name="CatbertServiceRoleProvider" type="UCDArch.Web.Providers.CatbertServiceRoleProvider" applicationName="SampleUCDArchApp" serviceUrlKey="RoleServiceUrl" authTokenKey="RoleToken" />
