--- a/Esra.Web/packages.config
+++ b/Esra.Web/packages.config
@@ -10,4 +10,5 @@
   <package id="UcdArchDlls" version="3.1.0.48" />
   <package id="CaesDesignBoilerplate" version="3.1.0.26" />
   <package id="MiniProfiler" version="1.3" />
+  <package id="jquery.datatables" version="1.8.1" />
 </packages>
