--- a/Esra.Web/Web.config
+++ b/Esra.Web/Web.config
@@ -22,6 +22,9 @@
       <property name="default_schema">ESRA.dbo</property>
       <property name="generate_statistics">true</property>
       <property name="adonet.batch_size">25</property>
+      <property name="cache.provider_class">NHibernate.Cache.HashtableCacheProvider</property>
+      <property name="cache.use_second_level_cache">true</property>
+      <property name="cache.use_query_cache">true</property>
       <!-- HBM Mapping Files -->
       <mapping assembly="Esra.Core" />
     </session-factory>
