--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\SalaryReviewAnalysisEditorViewModel.cs" />
     <Compile Include="Models\EsraBaseViewModel.cs" />
     <Compile Include="Models\EmployeeComparisonViewModel_bak.cs" />
     <Compile Include="Models\EmployeeSalaryComparisonViewModel.cs" />
@@ -194,6 +195,7 @@
     <Content Include="Css\main.css" />
     <EmbeddedResource Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Images\arrow_left.jpg" />
     <Content Include="Images\comment.png" />
     <Content Include="Images\delete.png" />
     <Content Include="Images\details.png" />
@@ -322,7 +324,7 @@
     <Content Include="Views\Account\LogOn.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\Index.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\Details.cshtml" />
-    <Content Include="Views\SalaryReviewAnalysis\Create.cshtml" />
+    <Content Include="Views\SalaryReviewAnalysis\Select.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\Edit.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\Delete.cshtml" />
     <None Include="Scripts\DataTables-1.8.1\extras\AutoFill\media\js\AutoFill.min.js.gz" />
@@ -343,6 +345,12 @@
     <Content Include="Views\Home\_EmulateUser.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\_SalaryReviewAnalysisSearchParamaters.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\_SalaryReviewAnalysisSearchResults.cshtml" />
+    <Content Include="Views\SalaryReviewAnalysis\_NewSalaryReviewAnalysisEmployeeSelector.cshtml" />
+    <Content Include="Views\SalaryReviewAnalysis\Create.cshtml" />
+    <Content Include="Views\SalaryReviewAnalysis\_EmployeeDetails.cshtml" />
+    <Content Include="Views\SalaryReviewAnalysis\_SalaryReviewAnalysis.cshtml">
+      <SubType>Code</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
