--- a/Esra.Core/Esra.Core.csproj
+++ b/Esra.Core/Esra.Core.csproj
@@ -53,6 +53,7 @@
       <HintPath>..\packages\NHibernate.Validator.1.3.1.4000\lib\Net35\NHibernate.Validator.Specific.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
