--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -325,7 +325,7 @@
     <Content Include="Views\Account\LogOn.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\Index.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\Details.cshtml" />
-    <Content Include="Views\SalaryReviewAnalysis\Select.cshtml" />
+    <Content Include="Views\SalaryReviewAnalysis\Create.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\Edit.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\Delete.cshtml" />
     <None Include="Scripts\DataTables-1.8.1\extras\AutoFill\media\js\AutoFill.min.js.gz" />
@@ -347,7 +347,7 @@
     <Content Include="Views\SalaryReviewAnalysis\_SalaryReviewAnalysisSearchParamaters.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\_SalaryReviewAnalysisSearchResults.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\_NewSalaryReviewAnalysisEmployeeSelector.cshtml" />
-    <Content Include="Views\SalaryReviewAnalysis\Create.cshtml" />
+    <None Include="Views\SalaryReviewAnalysis\Create.cshtml_bak" />
     <Content Include="Views\SalaryReviewAnalysis\_EmployeeDetails.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\_SalaryReviewAnalysis.cshtml">
       <SubType>Code</SubType>
@@ -362,6 +362,7 @@
     <Content Include="Views\SalaryReviewAnalysis\_SraEmployeeTitle.cshtml">
       <SubType>Code</SubType>
     </Content>
+    <Content Include="Views\SalaryReviewAnalysis\CreateEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
