Added department "aware" and ExCel Ops methods to project.
Esra.Core.Domain.Department:
	Added public static IList<Department> GetAllForUser(IRepository repository, string userId, string sortPropertyName, bool isAscending) to Department class, which returns a list of departments based on the user's units.

Revised ApplicationController:
	Added protected static bool IsDepartmentUser as this information will be needed across multiple controllers.

Revised EmployeeSalaryComparisonController:
	public ActionResult Index() to get DepartmentsList and EmployeesList for user.
	public ActionResult Details(string[] selectedTitleCodes, string[] selectedDepartmentCodes, string selectedEmployeeId) to get DepartmentsList and EmployeesList for user, Employees for user.
	Added public ActionResult ExportToExcel(string sortPropertyName, string isAscending, string selectedTitleCodesString, string selectedEmployeeId, string selectedDepartmentCodesString), which returns  a file array.

Esra.Core.Domain.Employee:
	Added public static IList<Employee> GetAllForUser(IRepository repository, User user, string sortPropertyName, bool isAscending)
	Added public static IList<Employee> GetAllForUser(IRepository repository, string userId, bool isDepartmentUser, string sortPropertyName, bool isAscending, string[] titleCodes, string pkEmployee, string[] departmentIds)
	Added public static IList<Employee> GetAll(string sortPropertyName, bool isAscending, string[] titleCodes, string pkEmployee, string[] departmentIds)
	Added public static IList<Employee> GetAll(string sortPropertyName, bool isAscending)
	Added property IsDepartmentEmployee
	Added method public static bool ComputeIsDepartmentEmployee(User user, Employee employee)

EmployeeSalaryComparisonViewModel:
	Added properties SortPropertyName and IsAscending to assist with model binding of ExportToExcel form.
	Removed populating of EmployeesList and DepartmentsList as these are now populated in the controller using the department and user aware me

--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -37,6 +37,9 @@
     <Reference Include="AutoMapper">
       <HintPath>..\Bin\AutoMapper.dll</HintPath>
     </Reference>
+    <Reference Include="CAESOps">
+      <HintPath>..\Bin\CAESOps.dll</HintPath>
+    </Reference>
     <Reference Include="Castle.Core">
       <HintPath>..\Bin\Castle.Core.dll</HintPath>
     </Reference>
@@ -347,6 +350,7 @@
     <Content Include="Views\SalaryReviewAnalysis\_SalaryReviewAnalysisSearchParamaters.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\_SalaryReviewAnalysisSearchResults.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\_NewSalaryReviewAnalysisEmployeeSelector.cshtml" />
+    <Content Include="Views\EmployeeSalaryComparison\_ExportToExcel.cshtml" />
     <None Include="Views\SalaryReviewAnalysis\Create.cshtml_bak" />
     <Content Include="Views\SalaryReviewAnalysis\_EmployeeDetails.cshtml" />
     <Content Include="Views\SalaryReviewAnalysis\_SalaryReviewAnalysis.cshtml">
