This was a lot of work dealing with jQuery DataTables and sorting.
It basically involved turning off the default sort behavior and implementing custom sort behavior.

Added DataTable column names for subsequent use in _ExportToExcel in determining sort column.

Disabled user-enabled multi-column DataTable sorting.

Added "All" records feature to DataTable paging.

Fixed Department DataTable, and search parameters so they functioned as desired for non-department users also.

Added several DataTable sort data types such as deptEmployee and currency for proper sorting behavior.

Added naturalSort routine for use by DataTable sorting.

Added string trim functionality to javascript string objects.

--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -209,6 +209,8 @@
     <Content Include="Images\printer.gif" />
     <Content Include="Images\top_blue_bar.jpg" />
     <Content Include="robots.txt" />
+    <Content Include="Scripts\dataTables.naturalSort.js" />
+    <Content Include="Scripts\dataTables.deptEmployee.js" />
     <Content Include="Scripts\DataTables-1.8.1\extras\AutoFill\media\js\AutoFill.js" />
     <Content Include="Scripts\DataTables-1.8.1\extras\AutoFill\media\js\AutoFill.min.js" />
     <Content Include="Scripts\DataTables-1.8.1\extras\ColReorder\media\js\ColReorder.js" />
@@ -241,10 +243,14 @@
     <Content Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\dataTables.currency.js" />
     <Content Include="Scripts\modernizr-1.7.js" />
     <Content Include="Scripts\modernizr-1.7.min.js" />
+    <Content Include="Scripts\StringTrim.js" />
     <Content Include="UCDArch.txt" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
