--- a/Esra.Core/Esra.Core.csproj
+++ b/Esra.Core/Esra.Core.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Domain\AppException.cs" />
     <Compile Include="Domain\ApptType.cs" />
     <Compile Include="Domain\ChangeType.cs" />
+    <Compile Include="Domain\SchoolEmployees.cs" />
     <Compile Include="Domain\Department.cs" />
     <Compile Include="Domain\Employee.cs" />
     <Compile Include="Domain\EmployeeChanges.cs" />
