--- a/Esra.Web/Esra.Web.csproj
+++ b/Esra.Web/Esra.Web.csproj
@@ -238,12 +238,18 @@
     <Content Include="Scripts\jquery-1.6-vsdoc.js" />
     <Content Include="Scripts\jquery-1.6.js" />
     <Content Include="Scripts\jquery-1.6.min.js" />
+    <Content Include="Scripts\jquery-dateFormat.js" />
     <Content Include="Scripts\jquery-ui-1.8.12.js" />
     <Content Include="Scripts\jquery-ui-1.8.12.min.js" />
     <Content Include="Scripts\jquery.formatCurrency-1.4.0.js" />
     <Content Include="Scripts\jquery.formatCurrency-1.4.0.min.js" />
     <Content Include="Scripts\jquery.numberformatter-1.2.2.js" />
     <Content Include="Scripts\jquery.numberformatter-1.2.2.min.js" />
+    <Content Include="Scripts\jquery.ui.autocomplete.js" />
+    <Content Include="Scripts\jquery.ui.button.js" />
+    <Content Include="Scripts\jquery.ui.core.js" />
+    <Content Include="Scripts\jquery.ui.position.js" />
+    <Content Include="Scripts\jquery.ui.widget.js" />
     <Content Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
